[tool.poetry]
name = "weedmaps"
version = "0.1.0"
description = "Analysis of cannabis retail distribution and social media sentiment in California"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "*"
openai = "*"
pandas = "*"
plotly = "*"
transformers = "*"
torch = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"
flake8 = "*"
pylint = "^3.3.4"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
